[tool.poetry]
name = "technicalutils"
version = "0.1.0"
description = ""
authors = ["edayot <pro.e.dayot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beet = ">=0.108.4"
mecha = ">=0.94.0"
weld-deps = ">=0.7.0"
frozendict = "^2.4.2"
bolt = "^0.48.0"
model-resolver = ">=0.10.0"
simple-item-plugin = {path = "../simple_item_plugin", develop = true}
smithed = {git = "https://github.com/edayot/smithed-python.git", branch = "main" }

[tool.poetry.dev-dependencies]
python-semantic-release = "^8.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.semantic_release]
major_on_zero = false
build_command = '''
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=true && \
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=false \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp"
'''
dist_path = "build"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_source = "commit"

remove_dist = false
tag_format = "v{version}"

[tool.semantic_release.publish]
dist_glob_patterns = ["build/*.zip"]
upload_to_vcs_release = true



[tool.beet]
output = "build"

pipeline = [
    "simple_item_plugin",
    "technicalutils",
]
require=[
    "bolt",
    "weld_deps",
    "mecha.contrib.relative_location",
    "mecha.contrib.nested_location",
]

ignore = [
    "stable_cache.json"
]

[tool.beet.data_pack]
name = "{{ project_id }}_{{ project_version }}_dp_bundled"
load = "src"

[tool.beet.resource_pack]
name = "{{ project_id }}_{{ project_version }}_rp_bundled"
load = "src"

[tool.beet.meta]
mc_supports = ["1.21"]
minecraft_version = "1.21"

[tool.beet.meta.simple_item_plugin]
custom_model_data = 1430000

[tool.beet.meta.mecha]
multiline = true
match = ["technicalutils:**"]


[tool.beet.meta.model_resolver]
render_size = 256
load_vanilla = true
save_namespace = "technicalutils"

[tool.beet.meta.weld_deps.deps]
itemio = "1.2.6"
"smithed.crafter.dev" = "0.4.1"
energy = "v1.7.0"
fluid_crafting = "v1.5.0"
nbtsmelting = "v1.8.0"
"%20chunk_scan.ores" = "v1.4.0"
chunk_scan = "v2.6.0"
common_signals = "0.0.3"
custom_block_ext = "0.2.0"

[tool.beet.meta.weld_deps.deps.fancy_pants]
version = "3.0.0"
source = "local"
[tool.beet.meta.weld_deps.deps.fancy_pants.local]
resourcepack="./src/integrated/fancyPantsv3_0_0.zip"



[tool.beet.meta.smithed.versioning]
scheduled_paths="impl/tick"

[tool.beet.meta.smithed.versioning.lantern_load]
step="load"
tag_path="load"
function_path="impl/test_load"

[tool.beet.meta.smithed.versioning.refactor]
match="{{ project_id }}:*"
find="{{ project_id }}:impl/"
replace="{{ project_id }}:v{{ version }}/"


[tool.beet.meta.smithed.versioning.api]
match="{{ project_id }}:v{{ version }}"
implementation_prefix="{{ project_id }}:v{{ version }}/"
version_check_path="v{{ version }}/calls"
tag_path="calls"



[tool.pyright]
typeCheckingMode = "basic"